src/test/deca/context/invalid/intermediaire2/mots_reserves/05if.deca
// Description:
// Test du mettre le mot réservé if, en nom de variable.
//
// Resultats:
//  05if.deca:10:8:
//
// Historique:
//    crée le 17/06/2022
{
    int if;
}